css/styles.css
@import url("theme_variables.css");


*,
html {
    box-sizing: border-box;
    font-family: var(--font);
    font-weight: 300;
}


body {
    color: var(--secondary-color);
    overflow-x: hidden;
    overflow-y: scroll;
}


/* top svg wave styling */
body>#svg {
    fill: var(--tertiary-color);
    position: fixed;
    top: -5px;
    z-index: -99;
    transform: rotate(180deg);
}


/* header styling */
.header {
    height: 10vh;
    padding: 10vh 10vw;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
}

.profile-img {
    height: 18vh;
    aspect-ratio: 1/1;
    border: 1px solid var(--secondary-color);
}

.profile-img * {
    height: 100%;
}

